Wed Jun  6 22:36:50 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * performance-tests/DCPS/InfoRepo_population/InfoRepo_population.mpc:

          Added an "after" to relate this file's *Idl project to the Sync_Idl
          project in ../Sync/Sync.mpc.  This is needed so that the SyncExtC.cpp
          and SyncC.h files have the correct relative timestamps in incremental
          builds.

Wed Jun  6 20:21:36 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.inl:

        * dds/DCPS/transport/simpleTCP/SimpleTcpDataLink.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpDataLink.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpSendStrategy.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpSendStrategy.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:

        * tests/DCPS/Reconnect/Writer.cpp:

          Various changes to fix the reconnect problem when publisher is
          getting restarted. Three are three problems identified and fixed.
          1. The test itself needs to call get_matched_subscriptions() to
             make sure the writer has correct handle before sending data.
          2. SendStrategy needs a reset function which resets the connection.
          3. The orb thread needs to check the connection before sending
             the FULLY_ASSOCIATED message to the publisher.

Wed Jun  6 17:47:15 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/ZeroCopyInfoSeq_T.cpp:
        * dds/DCPS/ZeroCopySeq_T.cpp:

          Fixed a warning that should explicitly initialize the base
          template in the sequence copy constructor.

Wed Jun  6 15:16:42 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * DDS_release_notes.txt:
          Add note regards participants BIT support default setting.
