@@ -98,7 +98,7 @@ tests/transport/simple_n/run_test.pl: !NO_DDS_TRANSPORT !DCPS_MIN !STATIC
 tests/transport/simple/run_test.pl: !NO_DDS_TRANSPORT !DCPS_MIN
 tests/transport/reliable_multicast/unittest: !NO_DDS_TRANSPORT !DCPS_MIN !NOMCAST
 performance-tests/DCPS/TCPListenerTest/run_test-1p1s.pl: !DCPS_MIN !STATIC
-performance-tests/DCPS/InfoRepo_population/run_test.pl: !DCPS_MIN !STATIC
+performance-tests/DCPS/InfoRepo_population/run_test.pl: !DCPS_MIN !STATIC !MIN_CORBA
 # run with single-copy read (the default is zero-copy read)
 performance-tests/DCPS/TCPListenerTest/run_test-1p1s.pl 13 1 500: !DCPS_MIN !STATIC
 performance-tests/DCPS/TCPListenerTest/run_test-1p4s.pl: !DCPS_MIN !STATIC
